# mcp-amazon-asin

./: .gitignore  README.md  pyproject.toml  test_runner.py
prompt/: auto_refinements.txt
src/mcp_amazon_asin/: cli.py  config.py  prompt-search.md  server.py  simple_cli.py  test_runner.py
src/mcp_amazon_asin/prompt/: prompt-dp.md  seller_recommendation.txt
src/mcp_amazon_asin/utils/: __init__.py  cache.py  dp.py  fields.py  prompt.py  search.py  setup.py  utils.py
tests/: test_mcp_server.py
