[project]
name = "mcp-amazon-asin"
version = "0.1.0"
description = "Model Context Provider (MCP) that fetches Amazon product information using ASINs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.10.1",
    "playwright>=1.53.0",
    "pydantic>=2.11.7",
    "click>=8.0.0",
    "google-genai>=1.25.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

# Specifies the build system and its requirements, as defined by PEP 517/518.
# This tells tools like 'pip' or 'uv' how to build the project from source.
[build-system]
# Lists the packages needed to build the project (e.g., creating a wheel).
# 'setuptools' is the core build tool, and 'wheel' is for creating .whl files.
requires = ["setuptools>=61.0", "wheel"]
# Defines the Python object that build frontends will use to execute the build.
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Tells setuptools that the root of the package content is the 'src' directory.
# This is a modern best practice known as the "src layout".
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Configures setuptools to automatically discover all packages to include.
# Specifies that the search for packages should start in the 'src' directory.
# This avoids having to manually list every package (e.g., mcp_amazon_asin, mcp_amazon_asin.utils).
where = ["src"]

# The `[project.scripts]` table defines command-line shortcuts to your Python functions.
# When you install this package, setuptools creates wrapper scripts in your environment's
# 'bin' directory. This allows you to run your functions directly from the terminal
# without having to use `python -m`.
#
# For example, after installation:
# - Running `amazon-asin-cli` in your terminal will execute the `main` function
#   located in the `src/mcp_amazon_asin/cli.py` file.
#
# This is a convenient way to expose entry points for your application, such as command-line
# interfaces, test runners, or other utilities.
[project.scripts]
amazon-asin-cli = "mcp_amazon_asin.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build", "dist", ".venv", "__pycache__"]

# Enable broad but useful rule sets
select = [
  "E",    # pycodestyle (formatting errors)
  "F",    # pyflakes (logical errors)
  "I",    # isort (import sorting)
  "UP",   # pyupgrade (modern syntax)
  "B",    # flake8-bugbear (code smells, risky patterns)
  "C90",  # mccabe complexity
  "N",    # naming conventions
  "PL",   # pylint rules
  "RUF",  # Ruff-specific improvements
]

# Disable specific noisy or overly opinionated rules
ignore = [
  "E501",      # Line too long (Black handles it)
  "PLR2004",   # Magic number comparisons (too strict in real-world code)
  "PLR0913",   # Too many function arguments (often valid in tests or view layers)
]

# Enable all auto-fixable rules
fixable = ["ALL"]

# Allow more arguments in test files only
[tool.ruff.per-file-ignores]
"tests/**" = ["PLR0913"]

# Complexity tuning: allow some flexibility, but not excessive
[tool.ruff.lint.mccabe]
max-complexity = 15  # 25 may be too lenient; 10–15 is common

[tool.ruff.lint.pylint]
max-branches = 15     # 25 is very high — hard to review/maintain
max-statements = 50   # Reasonable ceiling; 75 might hide unmaintainable code
